fixtures/input/nonempty/full.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    avp.kubernetes.io/path: kv/data/testing
  name: <name>
  namespace: <namespace>
  labels:
    app: <name>
spec:
  selector:
    app: <name>
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: <target-port>
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    avp.kubernetes.io/path: kv/data/testing
  name: <name>
  namespace: <namespace>
  labels:
    app: <name>
    version: <version>
spec:
  selector:
    matchLabels:
      app: <name>
  replicas: <replicas>
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      name: <name>
      labels:
        app: <name>
    spec:
      containers:
      - name: <name>
        image: foo.com/<name>:<tag>
        imagePullPolicy: Always
